--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     </title>
   </head>
   <body>
-    <h1> Bem vindo</h1>
+    <center>
+      <table width="90%" border="0">
+          <tr>
+            <td align="left">Olá</td>
+            <td align="middle"></td>
+          </tr>
+      </table>
+    </center>
   </body>
 </html>
