--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <table width="90%" border="0">
           <tr>
             <td align="left">Olá</td>
-            <td align="middle">Sou Murilo e esse é meuu site no GITHUB.</td>
+            <td>Sou Murilo e esse é meuu site no GITHUB.</td>
           </tr>
       </table>
     </center>
