--- a/index.html
+++ b/index.html
@@ -9,7 +9,23 @@
       <table width="90%" border="0">
           <tr>
             <td align="left">Olá</td>
-            <td>Sou Murilo e esse é meuu site no GITHUB.</td>
+            <td>Sou Murilo e esse é meu site no GITHUB.</td>
+          </tr>
+      </table>
+      <hr>
+      <table width="90%" border="0">
+          <tr>
+            <td align="left">Olá</td>
+                
+            <td>
+              <article>
+                <h2>Sobre o Murilo</h2>
+                <p>Nascido e crescido na região oeste do estado do Paraná na frinteira com Paraguai e Argentina.<br>
+                Desde 2008 trabalha na area de TI e desde 2010 trabalha com desenvolvimento de sistemas utilizando Java.
+                <br>Seu hobbies são atividades ao ar livre como camping, sleckline, tracking.
+                <br>Atualemnte mora na cidade de  Campina da Lagoa com sua esposa.</p>
+              </article>
+            </td>
           </tr>
       </table>
     </center>
