--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
       <hr>
       <table width="90%" border="0">
           <tr>
-            <td align="left">Olá</td>
+            <td align="left">
+              <a href="" target=""> LinkedIn </a>
+            </td>
                 
             <td>
               <article>
@@ -23,7 +25,7 @@
                 <p>Nascido e crescido na região oeste do estado do Paraná na frinteira com Paraguai e Argentina.<br>
                 Desde 2008 trabalha na area de TI e desde 2010 trabalha com desenvolvimento de sistemas utilizando Java.
                 <br>Seu hobbies são atividades ao ar livre como camping, sleckline, tracking.
-                <br>Atualemnte mora na cidade de  Campina da Lagoa com sua esposa.</p>
+                <br>Atualemnte mora na cidade de Campina da Lagoa-PR com sua esposa.</p>
               </article>
             </td>
           </tr>
