--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
       <table width="90%" border="0">
           <tr>
             <td align="left">
-              <a href="" target=""> LinkedIn </a>
+              <a href="https://www.linkedin.com/in/murilo-augusto-de-oliveira-34665130/" target="_blanc"> LinkedIn </a>
+              <a href="https://github.com/maitservices" target="_blanc"> GitHub </a>
             </td>
                 
             <td>
