--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <tr>
             <td align="left">
               <a href="https://www.linkedin.com/in/murilo-augusto-de-oliveira-34665130/" target="_blanc"> LinkedIn </a>
-              <br><a href="https://github.com/maitservices" target="_blanc"> GitHub </a>
+              <br><br><a href="https://github.com/maitservices" target="_blanc"> GitHub </a>
             </td>
                 
             <td>
